# PuPuBot

./: .env  .env.example  .env.qq  .gitignore  CHANGELOG.md  README.md  Test.py  config.example.json  config.json  deploy.bat  pack.py  pupu.yaml.example  requirements-memu.txt  requirements.lock.txt  requirements.txt  run_arbitrator.bat  run_arbitrator.py  run_arbitrator_stay_open.bat  start.py  启动pupu_siri.bat  启动仆仆.bat  启动仆仆控制台.bat
data/: pupu.db
desktop/pupu-siri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/pupu-siri/src-tauri/capabilities/: default.json
desktop/pupu-siri/src-tauri/src/: lib.rs  main.rs
docs/: AGENT.md  CODEX_CLI_CLASH_PROXY.md  GPT_SOVITS_TTS.md  QQ_BOT_TROUBLESHOOTING.md  TAVILY_MCP.md  TTS.md  branch-workflow.md
plugins/: __init__.py  pupu_plugin.py
pupu/: __init__.py  agent.py  app_config.py  arbiter_runtime.py  backup.py  cli.py  codex_mcp_server.py  command_registry.py  command_service.py  config.py  dialogue_loop.py  event_graph_export.py  event_thread_context.py  event_thread_report.py  fact_search.py  facts_report.py  familiarity.py  followup.py  followup_manager.py  hooks.py  important_event_context.py  important_event_report.py  instance_context.py  instance_main.py  llm.py  llm_providers.py  logging_utils.py  memory.py  message_sources.py  persona.py  proactive.py  proactive_control.py  prompt_format.py  review_followups.py  review_parser.py  richmsg.py  scheduler.py  sessions.py  shared_runtime.py  stardew_bridge.py  (+2 more)
pupu_console/: __init__.py  __main__.py  arbiter_server.py  arbitrator.py  instance_store.py  mcp_settings.py  (+4 more)
(+150 files in other folders)
