[package]
name = "pupu-siri"
version = "0.1.0"
description = "PuPu Siri desktop pet"
authors = ["PuPuBot"]
edition = "2021"

[lib]
name = "pupu_siri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-opener = "2.5.0"
